make it more abstract

--- a/static/index.html
+++ b/static/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Chat se SZIF pomocníkem</title>
+    <title>Chat se pomocníkem</title>
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <style>
         body {
@@ -35,10 +35,10 @@
 </head>
 <body>
     <div class="container">
-        <h1 class="text-center">Chatuj se SZIF pomocníkem</h1>
+        <h1 class="text-center">Chatuj se pomocníkem</h1>
         <div class="form-group">
             <label for="user-input">Napiš svůj dotaz a zmáčkni Enter:</label>
-            <input type="text" id="user-input" class="form-control" placeholder="Například... je traktor způsobilý výdaj?" aria-describedby="inputHelp" />
+            <input type="text" id="user-input" class="form-control" placeholder="Například... jak mi můžeš pomoci?" aria-describedby="inputHelp" />
             <small id="inputHelp" class="form-text text-muted">Napište svůj dotaz a stiskněte Enter.</small>
         </div>
         <div id="response" class="mt-4">
