changed input to textarea

--- a/static/index.html
+++ b/static/index.html
@@ -38,7 +38,7 @@
         <h1 class="text-center">Chatuj s Buddym</h1>
         <div class="form-group">
             <label for="user-input">Napiš svůj dotaz a zmáčkni Enter:</label>
-            <input type="text" id="user-input" class="form-control" placeholder="Například... jak mi můžeš pomoci?" aria-describedby="inputHelp" />
+            <textarea id="user-input" class="form-control" placeholder="Například... jak mi můžeš pomoci?" aria-describedby="inputHelp" rows="3" autofocus required></textarea>
             <small id="inputHelp" class="form-text text-muted">Napište svůj dotaz a stiskněte Enter.</small>
         </div>
         <div id="response" class="mt-4">
