--- a/static/index.html
+++ b/static/index.html
@@ -84,9 +84,9 @@
 
         function convertToHTML(text) {
             return text
-                .replace(/^### (.*$)/gim, '<h3>$1</h3>')
-                .replace(/^## (.*$)/gim, '<h2>$1</h2>')
-                .replace(/^# (.*$)/gim, '<h1>$1</h1>')
+                //.replace(/^### (.*$)/gim, '<h3>$1</h3>')
+                //.replace(/^## (.*$)/gim, '<h2>$1</h2>')
+                //.replace(/^# (.*$)/gim, '<h1>$1</h1>')
         }
 
         async function sendMessage() {
